# LLVM_LearningCurve

ConstantFolding/: constfold.cpp  input.c  input.ll  output.ll  res_output.ll
LVN/: CMakeLists.txt  LVNPass.cpp  output.ll  test.bc  test.c  test.ll
LocalValueNumbering/: input.c  lvn.cpp  output.ll  res_output.ll
LoopPass/: LoopPass.cpp  input.c  input.ll
